# data-science

./: README.md  pyproject.toml
notebooks/algorithms/classification/knn/: isl-2.4.7.ipynb
notebooks/algorithms/regression/simple_linear_regression/: isl-3.6.2.ipynb
notebooks/sklearn/: iterative_imputer.ipynb
