[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["Francesco Camillini <francesco.camillini@neprix.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
scipy = "^1.8.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
black = "^22.3.0"
pytest = "^7.1.1"
ipython = "^8.2.0"
isort = "^5.10.1"
jupyterlab = "^3.3.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
